--- a/package.json
+++ b/package.json
@@ -10,20 +10,53 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.11.0",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@emotion/react": "^11.11.4",
+    "@gsap/react": "^2.1.1",
+    "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.15.21",
+    "@react-icons/all-files": "^4.1.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "@tx666/masonry": "^0.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
+    "blurhash": "^1.1.5",
+    "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "framer-motion": "^11.3.17",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.40",
+    "react": "^18.2.0",
+    "react-blurhash": "^0.1.3",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-i18next": "^14.1.1",
+    "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.8.9",
+    "react-spinners": "^0.14.1",
+    "react-time-ago": "^7.3.3",
+    "react-world-flags": "^1.5.1",
+    "sonner": "^1.5.0",
+    "swiper": "^11.1.1",
+    "swr": "^2.2.5",
     "tailwindcss": "^3.4.7",
+    "uuid": "^9.0.1",
     "vite": "^5.3.4"
   }
 }
